@@ -1,0 +1,38 @@
+<?xml version="1.0"?>
+
+<project name="macos" default="dist" basedir=".">
+
+	<property name="jedit.install.dir"  value="../.."/>
+	<property name="jar.name"  value="MacOS.jar"/>
+
+	<property name="install.dir"  value=".."/>
+
+
+	<path id="project.class.path">
+		<pathelement location="${jedit.install.dir}/jedit.jar"/>
+		<pathelement location="."/>
+	</path>
+
+
+	<target name="compile">
+		<javac
+			srcdir="."
+			deprecation="on"
+			includeJavaRuntime="yes"
+		>
+			<classpath refid="project.class.path"/>
+		</javac>
+	</target>
+
+
+	<target name="dist" depends="compile">
+		<mkdir dir="${install.dir}"/>
+		<jar jarfile="${install.dir}/${jar.name}">
+			<fileset dir=".">
+				<include name="**/*.class"/>
+				<include name="**/*.props"/>
+				<include name="**/*.html"/>
+			</fileset>
+		</jar>
+	</target>
+</project>
